# Tensorflow_Works

./: .gitignore  pyproject.toml  requirements.txt
1-Introduction/: a-simple_nn.ipynb
10-Sequence_Models/: a-single_layer_lstm.ipynb  b-multiple_models_on_imdb.ipynb  c-sarcasm_with_bi_lstm.ipynb  d-sarcasm_detection_with_conv_layer.ipynb  requirements.txt
11-Sequence_Models_and_Literature/: a-generating_text_with_neural_network.ipynb
2-Introduction_to_Computer_Vision/: a-computer_vision_example.ipynb  b-callbacks_using_mnist.ipynb
3-Enhancing_Vision_with CNN/: a-Improve_CV_using_CNN.ipynb  b-Implementing_callbacks_with cnn.ipynb
4-Using_Real_Images/: a-horses_vs_humans_dataset.ipynb  b-validation_with_horse_vs_huma.ipynb  c-happy_or_sad_classification.ipynb
5-Exploring_Larger_Dataset/: a-cats_vs_dogs_dataset.ipynb  b-data_augmentation_on_horses_vs_humans.ipynb
6-Transfer_Learning/: a-transfer_learing_on_cats_vs_dogs.ipynb  b-transfer_learning_on_horse_vs_human.ipynb
7-Multiclass Classifications/: a-rock_paper_scissors_dataset.ipynb
8-Sentiment_in_Text/: a-building_a_vocabulary.ipynb  b-sarcasm_dataset.ipynb
9-Word_Embeddings/: a-imdb_dataset.ipynb  b-sarcasm_dataset.ipynb  c-sub_tokenization_with_imdb.ipynb  vecs.tsv
