[project]
name = "tensorflow_works"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "keras-nlp>=0.19.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pooch>=1.9.0",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
